// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`layout snapshots dashboard view at 140x40 1`] = `
"devagent-ts v0.1.0  │ Mission: add authentication                                                   MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
MISSION                        │ ACTIVITY STREAM                                                            │ FILES (2 CHANGED)
add authentication             │ You                                                                        │ M src/tools/fs.ts
 ✓ Understand                  │   create filesystem tool                                                   │ A src/tools/index.ts
 ✓ Inspect                     │                                                                            │
 ✓ Plan                        │ DevAgent · local/qwen3:30b                                                 │
 ▶ Execute              0m 00s │   Analyzing project structure and existing patterns...                     │
 ○ Complete                    │     • Reading package.json                                                 │
   ── ✓ Create User model      │     • Found TypeScript project                                             │
   ── ▶ Add Devise gem         │ ◆ Execute > Add Devise gem                                                 │
                               │                                                                            │
                               │ 📄 Gemfile (pending_review) +1 -0                                          │
                               │   +gem 'devise'                                                            │
                               │   ✓ Gemfile  +1 −0                                                         │
                               │   1 file · +1 −0                                                           │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
────────────────────────────── │                                                                            │
TOOLS                          │                                                                            │
▶ edit_file                (1) │                                                                            │
View all tools... (/tools)     │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │ ────────────────────────────────────────────────────────────────────────── │
                               │ 1 file changed · +1 −0 · Ctrl+D open diff                                  │
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"devagent-ts v0.1.0                      MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
You
  create filesystem tool

DevAgent · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project








───────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"devagent-ts v0.1.0                                          MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
You
  create filesystem tool

DevAgent · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project














───────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"devagent-ts v0.1.0                                                              MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
You
  create filesystem tool

DevAgent · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project














───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"devagent-ts v0.1.0                                                                                                      MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
ACTIVITY STREAM
You
  create filesystem tool

DevAgent · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project





























───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"devagent-ts v0.1.0                                                                                                                                                                  MODE: CODE   MODEL: qwen3:30b   10:42:11
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
ACTIVITY STREAM
You
  create filesystem tool

DevAgent · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project












































───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;
